--- a/dlib3/Makefile
+++ b/dlib3/Makefile
@@ -1,6 +1,6 @@
 CC=clang++
 CFLAGS=#-Wall -Werror -Wextra
-BINS=sdl.dylib
+BINS=sdl2.dylib
 LIB= SDL2
 LIBLINK=  $(shell pkg-config --cflags --libs sdl2)
 HEADER		=	../includes/
